Angular/angular-app/yaml/angular-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deploy
  labels:
    app: angular
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
        - name: angular
          image: techhouse1901/angular
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-service 
spec:
  selector:
    app: angular
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
